# emdca

./: .gitignore  PLAN.md  README.md  manifesto.md  pyproject.toml
.cursor/: hooks.json
.cursor/extensions/: arch_patterns.json
.cursor/hooks/: mirror.py
.cursor/rules/: 000-master-architecture.mdc
.cursor/rules/markdown-diagrams/: RULE.md
.cursor/rules/naming-conventions/: RULE.md
.cursor/rules/pattern-00-master-architecture/: RULE.md
.cursor/rules/pattern-01-factory-construction/: RULE.md
.cursor/rules/pattern-02-state-sum-types/: RULE.md
.cursor/rules/pattern-03-railway-control-flow/: RULE.md
.github/workflows/: ci.yml
ref/: agentic.md  arch.md  cursor_arch.md  mermaid_syntax_rules.md  structure.md
ref/cursor/: HOOKS.md
ref/patterns/: 01-factory-construction.md  02-state-sum-types.md  03-railway-control-flow.md  04-execution-intent.md  05-config-injection.md  06-storage-foreign-reality.md  07-acl-translation.md  08-orchestrator-loop.md  09-workflow-state-machine.md  10-infrastructure-capability-as-data.md
ref/src/: __init__.py  main.py
spec/: agentic.md  arch.md  skeleton.md  structure.md
spec/patterns/: 01-factory-construction.md  02-state-sum-types.md  03-railway-control-flow.md  04-execution-intent.md  05-config-injection.md  06-storage-foreign-reality.md  07-acl-translation.md  08-orchestrator-loop.md  09-workflow-state-machine.md  10-infrastructure-capability-as-data.md
spec/src/: main.py
tests/: conftest.py  test_core.py  test_globs.py  test_integration.py  test_parsing.py  test_shell.py  test_signals.py  verify_mirror.py
(+60 files in other folders)
